@@ -17,6 +17,8 @@
 	syntax ('0 BFC CERTIFY CLIP').
 - When an external program is attempted to be used without a binary path defined, one will be asked
 	with an input dialog instead of being told to go to configuration to set the path.
+- When adding edges with Intersector (which is done with Isecalc), the user is prompted for Isecalc's
+	path now as well if necessary instead of just ignoring it and not adding the edgelines.
 - If the vertex snapper finds a vertex closer than 4 pixels, it likely is the vertex being looked for
 	and the algorithm can terminate early, hopefully this will save a few cycles on large parts.
 - The camera icons now draw real tooltips instead of emulated ones.
